# flask-blog

./: .gitignore  README.md  pyproject.toml  requirements.txt
flaskr/: __init__.py  auth.py  blog.py
flaskr/static/: style.css
flaskr/templates/: base.html
flaskr/templates/blog/: create.html  index.html  update.html
tests/: test_blog.py
