[project]
name = "flaskr"
version = "1.0.0"
description = "Flask based blog that allows users to Create, Read, Update, and Delete posts. Users can upload images via aws s3"
dependencies = [
    "flask",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["flaskr"]